--- a/admin/kernel-syncdata-service/src/test/resources/application.properties
+++ b/admin/kernel-syncdata-service/src/test/resources/application.properties
@@ -60,16 +60,15 @@ mosip.kernel.registrationclient.secret.key=abc123
 mosip.kernel.auth.sendotp.url=https://dev.mosip.net/v1/authmanager/authenticate/sendotp
 #----------------- Websub config -----------------
 
-syncdata.websub.topic.ca-cert=test
+syncdata.websub.topic.ca-cert=CA_CERTIFICATE_UPLOADED
 syncdata.websub.callback.secret.ca-cert=secret
-syncdata.websub.callback.url.path.ca-cert=/callback/partner/ca_certificate
-syncdata.websub.callback.url.preauth.path.ca-cert=/v1/syncdata/callback/partner/ca_certificate
-syncdata.websub.callback.url.ca-cert=http://localhost:8089/v1/syncdata/callback/partner/ca_certificate
+syncdata.websub.callback.url.path.ca-cert=/websub/callback/cacert
+syncdata.websub.callback.url.ca-cert=http://localhost:8089/v1/syncdata/websub/callback/cacert
 websub.publish.url=http://localhost:9191/websub/publish
 websub.hub.url=http://localhost:9191/websub/hub
-syncdata.websub.resubscription.retry.count=3
+syncdata.websub.resubscription.retry.count=1
+syncdata.websub.resubscription.delay.millis=6000000
 subscriptions-delay-on-startup=120000
-syncdata.websub.resubscription.delay.millis=60000
 
 #----------------------- key manager config ---------------------------------------
 #Crypto asymmetric algorithm name
