MOSIP:15286 Fixed openapi.json failure for admin master data service.

--- a/admin/kernel-masterdata-service/src/main/resources/application-dev.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-dev.properties
@@ -53,3 +53,4 @@ masterdata.registerdevice.timestamp.validate=+5
 masterdata.websub.resubscription.delay.millis=6000000
 masterdata.subscriptions-delay-on-startup=120000
 
+mosip.kernel.config.server.file.storage.uri=https://dev.mosip.net/config/kernel-masterdata-service/mz/develop/
