--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -16,7 +16,6 @@ hibernate.cache.use_structured_entries=false
 hibernate.generate_statistics=false
 
 server.port=8086
-server.servlet.path=/masterdata
 
 mosip.optional-languages=ara,fra
 mosip.mandatory-languages=eng
@@ -62,12 +61,7 @@ scheduling.job.cron=0 0 2 * * ?
 
 spring.cache.type=NONE
 
-# swagger open api 
-openapi.info.title=Master Data Service
-openapi.info.description=Master Data Service for CRUD
-openapi.info.version=1.0
-openapi.info.license.name=Mosip
-openapi.info.license.url=https://docs.mosip.io/platform/license
+
 springdoc.swagger-ui.disable-swagger-default-url=true
 #master.search.maximum.rows=50
 zone.user.details.url=https://dev.mosip.net/v1/authmanager/userdetails
@@ -426,3 +420,16 @@ mosip.authmanager.base-url=https://dev.mosip.net/v1/authmanager
 mosip.authmanager.client-token-endpoint=${mosip.authmanager.base-url}/authenticate/clientidsecretkey
 
 mosip.auth.adapter.impl.basepackage=io.mosip.kernel.auth.defaultadapter
+server.servlet.context-path=/v1/masterdata
+
+#Swagger 3.0 open api
+openapi.info.title=Admin Master Service
+openapi.info.description=Admin Master for CRUD
+openapi.info.version=1.0
+openapi.info.license.name=Mosip
+openapi.info.license.url=https://docs.mosip.io/platform/license
+mosipbox.public.url=http://localhost:${server.port}
+openapi.service.servers[0].url=${mosipbox.public.url}${server.servlet.context-path}
+openapi.service.servers[0].description=Admin Masterdata url
+openapi.group.name=${openapi.info.title}
+openapi.group.paths[0]=/**
