--- a/admin/kernel-masterdata-service/pom.xml
+++ b/admin/kernel-masterdata-service/pom.xml
@@ -498,11 +498,11 @@
 										<folder>src/test/resources</folder>
 									</folders>
 									<profiles>
-										<profile>openapi-profile</profile>
+										<profile>dev</profile>
 									</profiles>
 									<arguments>
 										<argument>--server.port=8090</argument>
-										<argument>--server.servlet.path=/app/generic</argument>
+										<argument>--server.servlet.context-path=/app/generic</argument>
 									</arguments>
 
 								</configuration>
@@ -534,8 +534,8 @@
 							</execution>
 						</executions>
 						<configuration>
-							<apiDocsUrl>http://localhost:8090/app/generic/v3/api-docs</apiDocsUrl>
-							<outputFileName>openapi.json</outputFileName>
+							<apiDocsUrl>http://localhost:8090/app/generic/v3/api-docs/Admin%20Master%20Service</apiDocsUrl>
+							<outputFileName>${name}-openapi.json</outputFileName>
 							<outputDir>${project.build.directory}</outputDir>
 							<skip>false</skip>
 						</configuration>
