Mosip:15286 Fixed openapi.json failure of kernel-syc-data-service.

--- a/admin/kernel-syncdata-service/src/test/resources/application.properties
+++ b/admin/kernel-syncdata-service/src/test/resources/application.properties
@@ -173,3 +173,6 @@ mosip.sync.entity.auth-token.LOCATIONHIERARCHY=Authorization:OAUTH
 mosip.sync.entity.encrypted.LOCATIONHIERARCHY=false
 mosip.sync.entity.headers.LOCATIONHIERARCHY=Content-Type:text/plain;charset=UTF-8
 mosip.sync.entity.only-on-fullsync.LOCATIONHIERARCHY=false
+
+server.port=8089
+server.servlet.context-path=/v1/syncdata
