--- a/admin/kernel-syncdata-service/pom.xml
+++ b/admin/kernel-syncdata-service/pom.xml
@@ -485,7 +485,7 @@
 									</profiles>
 									<arguments>
 										<argument>--server.port=8090</argument>
-										<argument>--server.servlet.path=/app/generic</argument>
+										<argument>--server.servlet.context-path=/app/generic</argument>
 									</arguments>
 
 								</configuration>
@@ -517,8 +517,8 @@
 							</execution>
 						</executions>
 						<configuration>
-							<apiDocsUrl>http://localhost:8090/app/generic/v3/api-docs</apiDocsUrl>
-							<outputFileName>openapi.json</outputFileName>
+							<apiDocsUrl>http://localhost:8090/app/generic/v3/api-docs/kernel-syncdata-service</apiDocsUrl>
+							<outputFileName>${name}-openapi.json</outputFileName>
 							<outputDir>${project.build.directory}</outputDir>
 							<skip>false</skip>
 						</configuration>
