Mosip:15286 Fixed openapi.json generation of hotlist service

--- a/admin/hotlist-service/pom.xml
+++ b/admin/hotlist-service/pom.xml
@@ -257,7 +257,7 @@
 									</profiles>
 									<arguments>
 										<argument>--server.port=8090</argument>
-										<argument>--server.servlet.path=/app/generic</argument>
+										<argument>--server.servlet.context-path=/app/generic</argument>
 									</arguments>
 
 								</configuration>
@@ -289,8 +289,8 @@
 							</execution>
 						</executions>
 						<configuration>
-							<apiDocsUrl>http://localhost:8090/app/generic/v3/api-docs</apiDocsUrl>
-							<outputFileName>openapi.json</outputFileName>
+							<apiDocsUrl>http://localhost:8090/app/generic/v3/api-docs/HOTLIST</apiDocsUrl>
+							<outputFileName>${artifactId}-openapi.json</outputFileName>
 							<outputDir>${project.build.directory}</outputDir>
 							<skip>false</skip>
 						</configuration>
