--- a/admin/hotlist-service/src/test/resources/application.properties
+++ b/admin/hotlist-service/src/test/resources/application.properties
@@ -48,9 +48,11 @@ openapi.info.version=1.0
 openapi.info.license.name=Mosip
 openapi.info.license.url=https://docs.mosip.io/platform/license
 mosipbox.public.url=http://localhost:${server.port}
-openapi.service.servers[0].url=${mosipbox.public.url}${server.servlet.path}
+openapi.service.servers[0].url=${mosipbox.public.url}${server.servlet.context-path}
 openapi.service.servers[0].description=Admin Service url
-openapi.group.name=${openapi.info.title}
+openapi.group.name=HOTLIST
 openapi.group.paths[0]=/**
 springdoc.swagger-ui.disable-swagger-default-url=true
-spring.mvc.servlet.path=${server.servlet.path}
+spring.mvc.servlet.path=${server.servlet.context-path}
+server.port=8095
+server.servlet.context-path=/v1/hotlist
