Mosip:15286 Fixed openapi.json generation of admin service

--- a/admin/admin-service/src/test/resources/application-test.properties
+++ b/admin/admin-service/src/test/resources/application-test.properties
@@ -426,3 +426,10 @@ mosip.admin.packetupload.packetsync.url=https://dev.mosip.net/registrationproces
 mosip.admin.packetupload.packetsync.name=fullName,name,firstName,middleName,lastName
 mosip.admin.packetupload.packetsync.email=email
 mosip.admin.packetupload.packetsync.phone=phone
+
+mosip.auth.adapter.impl.basepackage=io.mosip.kernel.auth.defaultadapter
+mosip.kernel.auth.appids.realm.map={prereg:'preregistration',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip',admin:'mosip',crereq:'mosip',creser:'mosip',datsha:'mosip'}
+# Credential to request the token from OIDC provider.
+mosip.iam.adapter.clientid=mosip-admin-client
+mosip.iam.adapter.clientsecret=abc123
+mosip.iam.adapter.appid=admin
