--- a/admin/kernel-syncdata-service/src/test/resources/application.properties
+++ b/admin/kernel-syncdata-service/src/test/resources/application.properties
@@ -173,3 +173,5 @@ mosip.sync.entity.auth-token.LOCATIONHIERARCHY=Authorization:OAUTH
 mosip.sync.entity.encrypted.LOCATIONHIERARCHY=false
 mosip.sync.entity.headers.LOCATIONHIERARCHY=Content-Type:text/plain;charset=UTF-8
 mosip.sync.entity.only-on-fullsync.LOCATIONHIERARCHY=false
+
+mosip.sync.entity.encrypted.LOCATIONHIERARCHY=true
