--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -46,7 +46,7 @@ spring.cloud.config.name=master
 pring.profiles.active=test
 
 mosip.syncdata.tpm.required=false
-aplication.configuration.level.version=1.2.0-SNAPSHOT
+aplication.configuration.level.version=1.2.0-rc2
 
 mosip.kernel.masterdata.template_idauthentication_event=MASTERDATA_IDAUTHENTICATION_TEMPLATES
 mosip.kernel.masterdata.title_event=MASTERDATA_TITLES
