--- a/admin/kernel-syncdata-service/src/test/resources/application.properties
+++ b/admin/kernel-syncdata-service/src/test/resources/application.properties
@@ -122,7 +122,7 @@ mosip.kernel.partner.allowed.domains=test
 mosip.keymanager.dao.enabled=false
 mosip.auth.adapter.impl.basepackage=io.mosip.kernel.auth.defaultadapter
 
-aplication.configuration.level.version=1.2.0-SNAPSHOT
+aplication.configuration.level.version=1.2.0-rc2
 
 mosip.mandatory-languages=eng
 mosip.optional-languages=fra,ara
