implemented validator for rid

--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -91,6 +91,11 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+   		<groupId>io.mosip.kernel</groupId>
+   		<artifactId>kernel-idvalidator-rid</artifactId>
+   		<version>${project.version}</version>
+   	</dependency>
+		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-ui</artifactId>
 			<version>${springdoc.version}</version>
