--- a/admin/admin-service/src/main/resources/application-local1.properties
+++ b/admin/admin-service/src/main/resources/application-local1.properties
@@ -343,3 +343,15 @@ mosip.admin.packetupload.packetsync.url=https://dev.mosip.net/registrationproces
 mosip.admin.packetupload.packetsync.name=fullName,name,firstName,middleName,lastName
 mosip.admin.packetupload.packetsync.email=email
 mosip.admin.packetupload.packetsync.phone=phone
+
+#-----------------------------RID Properties---------------------------------------
+# length of the rid
+mosip.kernel.rid.length=29
+# length of the center id
+mosip.kernel.rid.centerid-length=5
+#length of the machine id
+mosip.kernel.rid.machineid-length=5
+# length of the timestamp
+mosip.kernel.rid.timestamp-length=14
+# rid sequence length
+mosip.kernel.rid.sequence-length=5
