--- a/admin/admin-service/src/test/resources/application-test.properties
+++ b/admin/admin-service/src/test/resources/application-test.properties
@@ -433,3 +433,16 @@ mosip.kernel.auth.appids.realm.map={prereg:'preregistration',ida:'mosip',registr
 mosip.iam.adapter.clientid=mosip-admin-client
 mosip.iam.adapter.clientsecret=abc123
 mosip.iam.adapter.appid=admin
+
+
+#-----------------------------RID Properties---------------------------------------
+# length of the rid
+mosip.kernel.rid.length=29
+# length of the center id
+mosip.kernel.rid.centerid-length=5
+#length of the machine id
+mosip.kernel.rid.machineid-length=5
+# length of the timestamp
+mosip.kernel.rid.timestamp-length=14
+# rid sequence length
+mosip.kernel.rid.sequence-length=5
