--- a/admin/admin-service/src/main/resources/application-local1.properties
+++ b/admin/admin-service/src/main/resources/application-local1.properties
@@ -355,3 +355,6 @@ mosip.kernel.rid.machineid-length=5
 mosip.kernel.rid.timestamp-length=14
 # rid sequence length
 mosip.kernel.rid.sequence-length=5
+
+config.server.file.storage.uri=${spring.cloud.config.uri}/${spring.application.name}/${spring.profiles.active}/${spring.cloud.config.label}/
+registration.processor.identityjson=registration-processor-identity.json
