code coerage and configuration file of syncdata

--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -17,7 +17,7 @@ hibernate.generate_statistics=false
 
 server.port=8086
 
-mosip.optional-languages=ara,fra
+mosip.optional-languages=ara,fra,tam
 mosip.mandatory-languages=eng
 mosip.recommended.centers.locCode =5
 mosip.kernel.masterdata.auth-manager-base-uri=https://dev.mosip.net/v1/authmanager
