--- a/admin/hotlist-service/pom.xml
+++ b/admin/hotlist-service/pom.xml
@@ -7,7 +7,7 @@
 	<version>1.2.0-prerel</version>
 	<name>Hotlist Service</name>
 	<description>Service to block/unblock ids in MOSIP</description>
-
+	<url>https://github.com/mosip/admin-services</url>
 	<properties>
 
 		<!-- common properties -->
@@ -144,6 +144,26 @@
 					<target>${maven.compiler.target}</target>
 				</configuration>
 			</plugin>
+		<plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-gpg-plugin</artifactId>
+                  <version>1.5</version>
+                  <executions>
+                        <execution>
+                          <id>sign-artifacts</id>
+                          <phase>verify</phase>
+                          <goals>
+                                <goal>sign</goal>
+                          </goals>
+		          <configuration>
+                		<gpgArguments>
+                    			<arg>--pinentry-mode</arg>
+                    			<arg>loopback</arg>
+                		</gpgArguments>
+            		 </configuration>
+                        </execution>
+                  </executions>
+                </plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
@@ -194,6 +214,26 @@
 			</plugin>
 		</plugins>
 	</build>
+	<scm>
+                <connection>scm:git:git://github.com/mosip/admin-services.git</connection>
+                <developerConnection>scm:git:ssh://github.com:mosip/admin-services.git</developerConnection>
+                <url>https://github.com/mosip/admin-services</url>
+                <tag>HEAD</tag>
+        </scm>
+	<licenses>
+        <license>
+                <name>MPL 2.0</name>
+                <url>https://www.mozilla.org/en-US/MPL/2.0/</url>
+        </license>
+        </licenses>
+		<developers>
+                <developer>
+                  <name>Mosip</name>
+                  <email>mosip.emailnotifier@gmail.com</email>
+                  <organization>io.mosip</organization>
+                  <organizationUrl>https://github.com/mosip/admin-services</organizationUrl>
+        </developer>
+        </developers>
 	<profiles>
 		<profile>
 			<id>sonar</id>
