[MOSIP-10883] updated workflow

--- a/.github/workflows/push_trigger.yml
+++ b/.github/workflows/push_trigger.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches:
       - '!release-branch'
-      - release*
+      - release-1*
       - master
       - 1.*
       - develop  
