Mosip-19748 Able to create & update Document Type, Document category , blocklisted words with special characters alone - no field validation

--- a/admin/kernel-masterdata-service/src/main/resources/application-local1.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-local1.properties
@@ -397,3 +397,4 @@ mosip.role.admin.masterdata.getdocumentcategoriesmissingidslangcode=GLOBAL_ADMIN
 mosip.role.admin.masterdata.getdynamicfieldmissingidslangcode=GLOBAL_ADMIN,ZONAL_ADMIN
 
 zone.user.details.url=https://dev.mosip.net/v1/authmanager/userdetails
+allowed_characters=a-z0-9
