--- a/admin/kernel-masterdata-service/src/main/resources/application-local1.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-local1.properties
@@ -14,15 +14,15 @@ hibernate.cache.use_query_cache=false
 hibernate.cache.use_structured_entries=false
 hibernate.generate_statistics=false
 
-mosip.kernel.packet-status-update-url=https://dev.mosip.net/registrationprocessor/v1/registrationstatus/search
+mosip.kernel.packet-status-update-url=https://dev2.mosip.net/registrationprocessor/v1/registrationstatus/search
 
 mosip.kernel.registrationcenterid.length=5
 mosip.kernel.machineid.length=5
 
-masterdata_database_url=jdbc:postgresql://dev.mosip.net:30090/mosip_master
+masterdata_database_url=jdbc:postgresql://dev2.mosip.net:30090/mosip_master
 masterdata_database_username=masteruser
 masterdata_database_password=mosip123
-auth.server.admin.issuer.uri=https://dev.mosip.net/keycloak/auth/realms/
+auth.server.admin.issuer.uri=https://dev2.mosip.net/keycloak/auth/realms/
 mosip.primary-language=eng
 mosip.secondary-language=
 mosip.all-languages=all
@@ -30,7 +30,7 @@ auth.server.admin.allowed.audience=mosip-regproc-client,mosip-prereg-client,mosi
 
 mosip.kernel.auth.appids.realm.map={prereg:'preregistration',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip',admin:'mosip',crereq:'mosip',creser:'mosip',datsha:'mosip'}
 
-#auth.server.validate.url=https://dev.mosip.net/v1/authmanager/authorize/validateToken
+#auth.server.validate.url=https://dev2.mosip.net/v1/authmanager/authorize/validateToken
 
 mosip.admin.ui.configs=primaryLangCode:${mosip.primary-language};secondaryLangCode:${mosip.secondary-language};version:${aplication.configuration.level.version}
 nHierarchyLevel:${mosip.recommended.centers.locCode}
@@ -39,12 +39,12 @@ auth.server.admin.offline.token.validate=false
 aplication.configuration.level.version=1.1.5
 mosip.optional-languages=
 mosip.mandatory-languages=eng
-auth.server.validate.url=https://dev.mosip.net/v1/authmanager/authorize/admin/validateToken
-auth.server.admin.validate.url=https://dev.mosip.net/v1/authmanager/authorize/admin/validateToken
+auth.server.validate.url=https://dev2.mosip.net/v1/authmanager/authorize/admin/validateToken
+auth.server.admin.validate.url=https://dev2.mosip.net/v1/authmanager/authorize/admin/validateToken
 
 master.search.maximum.rows=50
 
-mosip.kernel.masterdata.audit-url=https://dev.mosip.net/v1/auditmanager/audits
+mosip.kernel.masterdata.audit-url=https://dev2.mosip.net/v1/auditmanager/audits
 
 mosip.level=2
 mosip.iam.adapter.clientid=mosip-admin-client
@@ -57,12 +57,12 @@ mosip.kernel.applicant.type.age.limit = 5
 mosip.stage.environment=Staging
 mosip.auth.adapter.impl.basepackage=io.mosip.kernel.auth.defaultadapter
 mosip.kernel.applicantType.mvel.file=applicanttype.mvel
-mosip.kernel.config.server.file.storage.uri=https://dev.mosip.net/config/kernel-masterdata-service/mz/develop/
+mosip.kernel.config.server.file.storage.uri=https://dev2.mosip.net/config/kernel-masterdata-service/mz/develop/
 mosip.kernel.masterdata.auth-manager-base-uri=http://localhost:8080/
 
 mosip.kernel.masterdata.template_idauthentication_event=MASTERDATA_IDAUTHENTICATION_TEMPLATES
 mosip.kernel.masterdata.title_event=MASTERDATA_TITLES
-websub.publish.url=https://dev.mosip.net/websub/publish
+websub.publish.url=https://dev2.mosip.net/websub/publish
 
 mosip.kernel.masterdata.template_idauthentication_event_module_name=ID Authentication
 
@@ -396,5 +396,5 @@ mosip.role.admin.masterdata.getdocumenttypesmissingidslangcode=GLOBAL_ADMIN,ZONA
 mosip.role.admin.masterdata.getdocumentcategoriesmissingidslangcode=GLOBAL_ADMIN,ZONAL_ADMIN
 mosip.role.admin.masterdata.getdynamicfieldmissingidslangcode=GLOBAL_ADMIN,ZONAL_ADMIN
 
-zone.user.details.url=https://dev.mosip.net/v1/authmanager/userdetails
-allowed_characters=a-z0-9
+zone.user.details.url=https://dev2.mosip.net/v1/authmanager/userdetails
+mosip.kernel.masterdata.code.validate.regex=a-z0-9
