--- a/admin/admin-service/src/main/resources/application-local1.properties
+++ b/admin/admin-service/src/main/resources/application-local1.properties
@@ -133,12 +133,12 @@ mosip.admin.masterdata.card.document-types-ara=\u0623\u0646\u0648\u0627\u0639 \u
 
 #masterdata document category
 mosip.admin.masterdata.card.document-category-eng=Document Category
-mosip.admin.masterdata.card.document-category-fra=CatÃ©gorie de document
+mosip.admin.masterdata.card.document-category-fra=Catégorie de document
 mosip.admin.masterdata.card.document-category-ara=\u0641\u0626\u0629 \u0627\u0644\u0648\u062B\u064A\u0642\u0629
 
 #masterdata device specs
 mosip.admin.masterdata.card.device-specs-eng=Device Specification
-mosip.admin.masterdata.card.device-specs-fra=SpÃ©cification de l'appareil
+mosip.admin.masterdata.card.device-specs-fra=Spécification de l'appareil
 mosip.admin.masterdata.card.device-specs-ara=\u0645\u0648\u0627\u0635\u0641\u0627\u062A \u0627\u0644\u062C\u0647\u0627\u0632
 
 #masteradata holidays
@@ -158,7 +158,7 @@ mosip.admin.masterdata.card.rejection-reason-ara=\u0623\u0633\u0628\u0627\u0628 
 
 #masterdata template
 mosip.admin.masterdata.card.templates-eng=Templates
-mosip.admin.masterdata.card.templates-fra=ModÃ¨les
+mosip.admin.masterdata.card.templates-fra=Modèles
 mosip.admin.masterdata.card.templates-ara=\u0642\u0648\u0627\u0644\u0628
 
 #masterdata valid document
@@ -283,7 +283,7 @@ auth.server.admin.allowed.audience=mosip-regproc-client,mosip-prereg-client,mosi
 
 # Credential to request the token from OIDC provider.
 mosip.iam.adapter.clientid=mosip-admin-client
-mosip.iam.adapter.clientsecret=abc123
+mosip.iam.adapter.clientsecret=xyz123
 mosip.iam.adapter.appid=admin
 
 ## packet-manager properties
@@ -356,5 +356,5 @@ mosip.kernel.rid.timestamp-length=14
 # rid sequence length
 mosip.kernel.rid.sequence-length=5
 
-config.server.file.storage.uri=${spring.cloud.config.uri}/${spring.application.name}/${spring.profiles.active}/${spring.cloud.config.label}/
+config.server.file.storage.uri=https://dev.mosip.net/config/admin/mz/develop2-v2
 registration.processor.identityjson=registration-processor-identity.json
