Mosip 20475 key manager delegation controller

--- a/admin/kernel-masterdata-service/src/main/resources/application-local1.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-local1.properties
@@ -396,5 +396,22 @@ mosip.role.admin.masterdata.getdocumenttypesmissingidslangcode=GLOBAL_ADMIN,ZONA
 mosip.role.admin.masterdata.getdocumentcategoriesmissingidslangcode=GLOBAL_ADMIN,ZONAL_ADMIN
 mosip.role.admin.masterdata.getdynamicfieldmissingidslangcode=GLOBAL_ADMIN,ZONAL_ADMIN
 
+
+
+mosip.role.admin.masterdata.getgeneratecsrcertificateapplicationidreferenceid=GLOBAL_ADMIN,ZONAL_ADMIN
+mosip.role.admin.masterdata.postuploadcertificate=GLOBAL_ADMIN,ZONAL_ADMIN
+mosip.role.admin.masterdata.postgeneratecsr=GLOBAL_ADMIN,ZONAL_ADMIN
+mosip.role.admin.masterdata.postuploadotherdomaincertificate=GLOBAL_ADMIN,ZONAL_ADMIN
+
 zone.user.details.url=https://dev.mosip.net/v1/authmanager/userdetails
 mosip.kernel.masterdata.code.validate.regex=[^a-z0-9]
+
+mosip.centertypecode.validate.regex=^[a-zA-Z0-9]([_-](?![_-])|[a-zA-Z0-9]){0,34}[a-zA-Z0-9]$
+mosip.kernel.config.server.file.storage.uri=https://dev.mosip.net/config/kernel-masterdata-service/mz/develop-v2/
+
+
+
+mosip.kernel.keymanager.generatecsr=https://dev.mosip.net/v1/keymanager/generateCSR
+mosip.kernel.keymanager.getcertificate=https://dev.mosip.net/v1/keymanager/getCertificate?
+mosip.kernel.keymanager.uploadcertificate=https://dev.mosip.net/v1/keymanager/uploadCertificate
+mosip.kernel.keymanager.uploadotherdomaincertificate=https://dev.mosip.net/v1/keymanager/uploadOtherDomainCertificate
