--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -435,3 +435,12 @@ openapi.group.name=${openapi.info.title}
 openapi.group.paths[0]=/**
 mosip.kernel.masterdata.code.validate.regex=[^a-z0-9]
 
+mosip.kernel.keymanager.generatecsr=https://dev.mosip.net/v1/keymanager/generateCSR
+mosip.kernel.keymanager.getcertificate=https://dev.mosip.net/v1/keymanager/getCertificate?
+mosip.kernel.keymanager.uploadcertificate=https://dev.mosip.net/v1/keymanager/uploadCertificate
+mosip.kernel.keymanager.uploadotherdomaincertificate=https://dev.mosip.net/v1/keymanager/uploadOtherDomainCertificate
+
+mosip.role.admin.masterdata.getgeneratecsrcertificateapplicationidreferenceid=GLOBAL_ADMIN,ZONAL_ADMIN
+mosip.role.admin.masterdata.postuploadcertificate=GLOBAL_ADMIN,ZONAL_ADMIN
+mosip.role.admin.masterdata.postgeneratecsr=GLOBAL_ADMIN,ZONAL_ADMIN
+mosip.role.admin.masterdata.postuploadotherdomaincertificate=GLOBAL_ADMIN,ZONAL_ADMIN
