MOSIP-20475 key manager delegation controller

--- a/admin/admin-service/src/test/resources/application-test.properties
+++ b/admin/admin-service/src/test/resources/application-test.properties
@@ -449,3 +449,16 @@ mosip.kernel.rid.sequence-length=5
 
 config.server.file.storage.uri=${spring.cloud.config.uri}/${spring.application.name}/${spring.profiles.active}/${spring.cloud.config.label}/
 registration.processor.identityjson=registration-processor-identity.json
+
+##------------key manager properties---------------------------------------------------
+
+mosip.kernel.keymanager.generatecsr=https://dev.mosip.net/v1/keymanager/generateCSR
+mosip.kernel.keymanager.getcertificate=https://dev.mosip.net/v1/keymanager/getCertificate?
+mosip.kernel.keymanager.uploadcertificate=https://dev.mosip.net/v1/keymanager/uploadCertificate
+mosip.kernel.keymanager.uploadotherdomaincertificate=https://dev.mosip.net/v1/keymanager/uploadOtherDomainCertificate
+
+
+mosip.role.admin.getgeneratecsrcertificateapplicationidreferenceid=GLOBAL_ADMIN,ZONAL_ADMIN
+mosip.role.admin.postuploadcertificate=GLOBAL_ADMIN,ZONAL_ADMIN
+mosip.role.admin.postgeneratecsr=GLOBAL_ADMIN,ZONAL_ADMIN
+mosip.role.admin.postuploadotherdomaincertificate=GLOBAL_ADMIN,ZONAL_ADMIN
