--- a/admin/admin-service/src/main/resources/application-local1.properties
+++ b/admin/admin-service/src/main/resources/application-local1.properties
@@ -358,3 +358,18 @@ mosip.kernel.rid.sequence-length=5
 
 config.server.file.storage.uri=https://dev.mosip.net/config/admin/mz/develop2-v2
 registration.processor.identityjson=registration-processor-identity.json
+
+
+
+##------------key manager properties---------------------------------------------------
+
+mosip.kernel.keymanager.generatecsr=https://dev.mosip.net/v1/keymanager/generateCSR
+mosip.kernel.keymanager.getcertificate=https://dev.mosip.net/v1/keymanager/getCertificate?
+mosip.kernel.keymanager.uploadcertificate=https://dev.mosip.net/v1/keymanager/uploadCertificate
+mosip.kernel.keymanager.uploadotherdomaincertificate=https://dev.mosip.net/v1/keymanager/uploadOtherDomainCertificate
+
+
+mosip.role.admin.getgeneratecsrcertificateapplicationidreferenceid=GLOBAL_ADMIN,ZONAL_ADMIN
+mosip.role.admin.postuploadcertificate=GLOBAL_ADMIN,ZONAL_ADMIN
+mosip.role.admin.postgeneratecsr=GLOBAL_ADMIN,ZONAL_ADMIN
+mosip.role.admin.postuploadotherdomaincertificate=GLOBAL_ADMIN,ZONAL_ADMIN
