--- a/admin/admin-service/src/test/resources/application-test.properties
+++ b/admin/admin-service/src/test/resources/application-test.properties
@@ -462,3 +462,5 @@ mosip.role.admin.getgeneratecsrcertificateapplicationidreferenceid=GLOBAL_ADMIN,
 mosip.role.admin.postuploadcertificate=GLOBAL_ADMIN,ZONAL_ADMIN
 mosip.role.admin.postgeneratecsr=GLOBAL_ADMIN,ZONAL_ADMIN
 mosip.role.admin.postuploadotherdomaincertificate=GLOBAL_ADMIN,ZONAL_ADMIN
+mosip.admin.masterdata.service.version=v1
+mosip.admin.base.url=https://dev.mosip.net
