--- a/admin/kernel-masterdata-service/src/main/resources/application-dev.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-dev.properties
@@ -54,3 +54,6 @@ masterdata.websub.resubscription.delay.millis=6000000
 masterdata.subscriptions-delay-on-startup=120000
 
 mosip.kernel.config.server.file.storage.uri=https://dev.mosip.net/config/kernel-masterdata-service/mz/develop/
+
+mosip.kernel.filtervalue.max_columns=200
+mosip.admin.ui.configs=primaryLangCode:${mosip.primary-language};secondaryLangCode:${mosip.secondary-language};version:${aplication.configuration.level.version};filterValueMaxCount:{"default":${mosip.kernel.filtervalue.max_columns},"registrationcenters":50,"locations":100}
