--- a/admin/kernel-masterdata-service/src/main/resources/application-local.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-local.properties
@@ -28,8 +28,8 @@ mosip.secondary-language=
 mosip.all-languages=all
 #auth.server.validate.url=https://dev.mosip.net/v1/authmanager/authorize/validateToken
 
-mosip.admin.ui.configs=primaryLangCode:${mosip.primary-language};secondaryLangCode:${mosip.secondary-language};version:${aplication.configuration.level.version}
-nHierarchyLevel:${mosip.recommended.centers.locCode}
+mosip.kernel.filtervalue.max_columns=200
+mosip.admin.ui.configs=primaryLangCode:${mosip.primary-language};secondaryLangCode:${mosip.secondary-language};version:${aplication.configuration.level.version};filterValueMaxCount:{"default":${mosip.kernel.filtervalue.max_columns},"registrationcenters":50,"locations":100}
 mosip.recommended.centers.locCode =5
 
 aplication.configuration.level.version=1.1.5
