--- a/admin/kernel-masterdata-service/src/test/resources/application.properties
+++ b/admin/kernel-masterdata-service/src/test/resources/application.properties
@@ -404,8 +404,8 @@ mosip.kernel.config.server.file.storage.uri=http://localhost/config/kernel-maste
 mosip.primary-language=eng
 mosip.secondary-language=ara
 mosip.all-languages=all
-mosip.admin.ui.configs=primaryLangCode:${mosip.primary-language};secondaryLangCode:${mosip.secondary-language};version:${aplication.configuration.level.version};1
-nHierarchyLevel:${mosip.recommended.centers.locCode},supportedLanguages:${mosip.supported-languages}
+mosip.kernel.filtervalue.max_columns=200
+mosip.admin.ui.configs=primaryLangCode:${mosip.primary-language};secondaryLangCode:${mosip.secondary-language};version:${aplication.configuration.level.version};filterValueMaxCount:{"default":${mosip.kernel.filtervalue.max_columns},"registrationcenters":50,"locations":100}
 
 
 auth.server.admin.issuer.uri=https://dev.mosip.net/keycloak/auth/realms/
