--- a/admin/kernel-masterdata-service/src/main/resources/application-local1.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-local1.properties
@@ -31,9 +31,8 @@ auth.server.admin.allowed.audience=mosip-regproc-client,mosip-prereg-client,mosi
 mosip.kernel.auth.appids.realm.map={prereg:'preregistration',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip',admin:'mosip',crereq:'mosip',creser:'mosip',datsha:'mosip'}
 
 #auth.server.validate.url=https://dev.mosip.net/v1/authmanager/authorize/validateToken
-
-mosip.admin.ui.configs=primaryLangCode:${mosip.primary-language};secondaryLangCode:${mosip.secondary-language};version:${aplication.configuration.level.version}
-nHierarchyLevel:${mosip.recommended.centers.locCode}
+mosip.kernel.filtervalue.max_columns=200
+mosip.admin.ui.configs=primaryLangCode:${mosip.primary-language};secondaryLangCode:${mosip.secondary-language};version:${aplication.configuration.level.version};filterValueMaxCount:{"default":${mosip.kernel.filtervalue.max_columns},"registrationcenters":50,"locations":100}
 mosip.recommended.centers.locCode =5
 auth.server.admin.offline.token.validate=false
 aplication.configuration.level.version=1.1.5
