--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -192,7 +192,7 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-logger-logback</artifactId>
-			<version>1.2.0</version>
+			<version>1.2.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
