--- a/admin/admin-service/src/main/resources/application-local1.properties
+++ b/admin/admin-service/src/main/resources/application-local1.properties
@@ -362,3 +362,5 @@ registration.processor.identityjson=registration-processor-identity.json
 mosip.admin.masterdata.service.version=v1
 mosip.admin.keymanager.service.version=v1
 mosip.admin.base.url=https://dev.mosip.net
+mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
+auth.allowed.urls=http://localhost:5000/
