--- a/admin/admin-service/src/test/resources/application-test.properties
+++ b/admin/admin-service/src/test/resources/application-test.properties
@@ -453,4 +453,6 @@ registration.processor.identityjson=registration-processor-identity.json
 mosip.admin.masterdata.service.version=v1
 mosip.admin.keymanager.service.version=v1
 mosip.admin.base.url=https://dev.mosip.net
-auth.allowed.urls=https://dev.mosip.net
+mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
+auth.allowed.urls=http://localhost:5000/
+
