--- a/db_release_scripts/mosip_master/master_release_deploy.properties
+++ b/db_release_scripts/mosip_master/master_release_deploy.properties
@@ -10,3 +10,4 @@ ALTER_SCRIPT_FLAG=1
 ALTER_SCRIPT_FILENAME=master-scripts_release.sql
 REVOKE_SCRIPT_FLAG=1
 REVOKE_SCRIPT_FILENAME=master-scripts_revoke.sql
+PRIMARY_LANGUAGE_CODE=eng
