--- a/admin/admin-service/src/test/resources/application-test.properties
+++ b/admin/admin-service/src/test/resources/application-test.properties
@@ -450,8 +450,8 @@ mosip.kernel.rid.sequence-length=5
 config.server.file.storage.uri=${spring.cloud.config.uri}/${spring.application.name}/${spring.profiles.active}/${spring.cloud.config.label}/
 registration.processor.identityjson=registration-processor-identity.json
 
-mosip.admin.masterdata.service.version=v1
-mosip.admin.keymanager.service.version=v1
+mosip.admin.masterdata.service.url=https://dev.mosip.net/v1
+mosip.admin.keymanager.service.url=https://dev.mosip.net/v1
 mosip.admin.base.url=https://dev.mosip.net
 mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
 auth.allowed.urls=http://localhost:5000/
