--- a/admin/admin-service/src/main/resources/application-local1.properties
+++ b/admin/admin-service/src/main/resources/application-local1.properties
@@ -364,3 +364,4 @@ mosip.admin.keymanager.service.version=v1
 mosip.admin.base.url=https://dev.mosip.net
 mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
 auth.allowed.urls=http://localhost:5000/
+RETRIEVE_IDENTITY_API=https://dev.mosip.net/idrepository/v1/identity/idvid
