--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -107,7 +107,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
 		<dependency>
 			<groupId>io.mosip.commons</groupId>
 			<artifactId>commons-packet-manager</artifactId>
@@ -143,7 +142,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
 		<dependency>
 			<groupId>org.digibooster.spring.batch</groupId>
 			<artifactId>spring-batch-security</artifactId>
@@ -155,7 +153,16 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
+		<dependency>
+			<groupId>io.mosip.kernel</groupId>
+			<artifactId>kernel-cbeffutil-api</artifactId>
+			<version>${kernel.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.mosip.biometric.util</groupId>
+			<artifactId>biometrics-util</artifactId>
+			<version>${kernel.version}</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
