--- a/admin/admin-service/src/test/resources/application-test.properties
+++ b/admin/admin-service/src/test/resources/application-test.properties
@@ -46,7 +46,7 @@ auth.role.prefix=ROLE_
 auth.header.name=Authorization
 
 javax.persistence.jdbc.driver=org.h2.Driver
-javax.persistence.jdbc.url=jdbc:h2\:mem\:testdb;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF NOT EXISTS  ADMIN
+javax.persistence.jdbc.url=jdbc:h2\:mem\:testdb;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF NOT EXISTS  MASTER
 javax.persistence.jdbc.username=sa
 javax.persistence.jdbc.password=sa
 hibernate.dialect=org.hibernate.dialect.H2Dialect
@@ -315,3 +315,15 @@ mosip.iam.authorization_endpoint=http://localhost:8080/keycloak/auth/realms/{rea
 mosip.iam.module.admin_realm_id=mosip
 
 mosip.iam.token_endpoint=http://localhost:8080/keycloak/auth/realms/{realmId}/protocol/openid-connect/token
+RETRIEVE_IDENTITY_API=https://dev.mosip.net/idrepository/v1/identity/idvid
+#-----------------------------RID Properties---------------------------------------
+# length of the rid
+mosip.kernel.rid.length=29
+# length of the center id
+mosip.kernel.rid.centerid-length=5
+#length of the machine id
+mosip.kernel.machineid.length=5
+# length of the timestamp
+mosip.kernel.rid.timestamp-length=14
+# rid sequence length
+mosip.kernel.rid.sequence-length=5
