--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -32,6 +32,27 @@
 			<version>${lombok.version}</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi</artifactId>
+		    <version>5.2.2</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi-ooxml</artifactId>
+		    <version>5.2.2</version>
+		</dependency>
+		<dependency>
+		    <groupId>commons-io</groupId>
+		    <artifactId>commons-io</artifactId>
+		    <version>2.10.0</version>
+		</dependency>
+		
+		<dependency>
+		  <groupId>org.springframework.batch.extensions</groupId>
+		  <artifactId>spring-batch-excel</artifactId>
+		  <version>0.1.0</version>
+		</dependency>
 	
 	    <dependency>
 			<groupId>io.mosip.kernel</groupId>
