--- a/admin/admin-service/src/main/resources/application-local.properties
+++ b/admin/admin-service/src/main/resources/application-local.properties
@@ -269,3 +269,5 @@ mosip.kernel.machineid.length=5
 mosip.kernel.rid.timestamp-length=14
 # rid sequence length
 mosip.kernel.rid.sequence-length=5
+mosip.admin.identityMappingJson=identity-mapping.json
+mosip.kernel.config.server.file.storage.uri=https://dev.mosip.net/config/admin/mz/1.1.5.4/
