updated code based on review comments

--- a/admin/admin-service/src/test/resources/application-test.properties
+++ b/admin/admin-service/src/test/resources/application-test.properties
@@ -329,3 +329,4 @@ mosip.kernel.rid.timestamp-length=14
 mosip.kernel.rid.sequence-length=5
 mosip.admin.identityMappingJson=identity-mapping.json
 mosip.kernel.config.server.file.storage.uri=https://dev.mosip.net/config/admin/mz/1.1.5.4/
+mosip.admin.applicantDetails=dob,applicantPhoto
