--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -106,6 +106,11 @@
 			<artifactId>kernel-idvalidator-rid</artifactId>
 			<version>1.1.5.3</version>
 		</dependency>
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
