--- a/admin/kernel-syncdata-service/src/main/resources/application-local.properties
+++ b/admin/kernel-syncdata-service/src/main/resources/application-local.properties
@@ -152,7 +152,7 @@ mosip.role.admin.syncdata.getclientsettings=REGISTRATION_SUPERVISOR,REGISTRATION
 mosip.role.admin.syncdata.getpublickeyapplicationid=REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,REGISTRATION_ADMIN
 mosip.role.admin.syncdata.gettpmpublickeyverify=REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,REGISTRATION_ADMIN,default
 mosip.role.admin.syncdata.getlatestidschema=REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,REGISTRATION_ADMIN,default
-mosip.role.admin.syncdata.getgetcertificate=REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,REGISTRATION_ADMIN,default
+mosip.role.admin.syncdata.getgetcertificate=REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,REGISTRATION_ADMIN,default,KEY_MAKER
 mosip.role.admin.syncdata.gettpmpublickeymachineid=REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,REGISTRATION_ADMIN,default
 mosip.role.admin.syncdata.getconfigskeyIndex=REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,REGISTRATION_ADMIN,default
 mosip.role.admin.syncdata.getuserdetails=REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,REGISTRATION_ADMIN,default
