Updated roles for admin-services

--- a/admin/kernel-masterdata-service/src/main/resources/application-local.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-local.properties
@@ -91,15 +91,15 @@ mosip.role.admin.masterdata.getblocklistedwordsall=GLOBAL_ADMIN,ZONAL_ADMIN,MAST
 mosip.role.admin.masterdata.postblocklistedwordssearch=GLOBAL_ADMIN,ZONAL_ADMIN,MASTERDATA_ADMIN
 mosip.role.admin.masterdata.postblocklistedwordsfiltervalues=GLOBAL_ADMIN,ZONAL_ADMIN,MASTERDATA_ADMIN
 mosip.role.admin.masterdata.patchblocklistedwords=GLOBAL_ADMIN,ZONAL_ADMIN,REGISTRATION_ADMIN,MASTERDATA_ADMIN
-mosip.role.admin.masterdata.getdeviceslanguagecode=ZONAL_ADMIN,GLOBAL_ADMIN,REGISTRATION_PROCESSOR,REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER
-mosip.role.admin.masterdata.getdeviceslanguagecodedevicetype=ZONAL_ADMIN,GLOBAL_ADMIN,REGISTRATION_PROCESSOR,REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER
+mosip.role.admin.masterdata.getdeviceslanguagecode=ZONAL_ADMIN,GLOBAL_ADMIN,REGISTRATION_PROCESSOR,REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,MASTERDATA_ADMIN
+mosip.role.admin.masterdata.getdeviceslanguagecodedevicetype=ZONAL_ADMIN,GLOBAL_ADMIN,REGISTRATION_PROCESSOR,REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,MASTERDATA_ADMIN
 mosip.role.admin.masterdata.postdevices=GLOBAL_ADMIN,ZONAL_ADMIN,MASTERDATA_ADMIN
-mosip.role.admin.masterdata.putdevices=ZONAL_ADMIN,GLOBAL_ADMIN
-mosip.role.admin.masterdata.getdevicesmappeddevicesregcenterid=ZONAL_ADMIN,GLOBAL_ADMIN,REGISTRATION_PROCESSOR,REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER
+mosip.role.admin.masterdata.putdevices=ZONAL_ADMIN,GLOBAL_ADMIN,MASTERDATA_ADMIN
+mosip.role.admin.masterdata.getdevicesmappeddevicesregcenterid=ZONAL_ADMIN,GLOBAL_ADMIN,REGISTRATION_PROCESSOR,REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,MASTERDATA_ADMIN
 mosip.role.admin.masterdata.postdevicessearch=ZONAL_ADMIN,GLOBAL_ADMIN,MASTERDATA_ADMIN
 mosip.role.admin.masterdata.postdevicesfiltervalues=ZONAL_ADMIN,GLOBAL_ADMIN,MASTERDATA_ADMIN
-mosip.role.admin.masterdata.putdevicesdecommissiondeviceid=ZONAL_ADMIN,GLOBAL_ADMIN
-mosip.role.admin.masterdata.patchdevices=ZONAL_ADMIN,GLOBAL_ADMIN
+mosip.role.admin.masterdata.putdevicesdecommissiondeviceid=ZONAL_ADMIN,GLOBAL_ADMIN,MASTERDATA_ADMIN
+mosip.role.admin.masterdata.patchdevices=ZONAL_ADMIN,GLOBAL_ADMIN,MASTERDATA_ADMIN
 mosip.role.admin.masterdata.getdeviceshistoriesidlangcodeeffdatetimes=REGISTRATION_PROCESSOR,GLOBAL_ADMIN,ZONAL_ADMIN
 mosip.role.admin.masterdata.postdeviceprovider=GLOBAL_ADMIN,ZONAL_ADMIN,PARTNER_ADMIN,PARTNER,AUTH_PARTNER,DEVICE_MANAGER,DEVICE_PROVIDER
 mosip.role.admin.masterdata.putdeviceprovider=GLOBAL_ADMIN,ZONAL_ADMIN,PARTNER_ADMIN,PARTNER,AUTH_PARTNER,DEVICE_MANAGER,DEVICE_PROVIDER
@@ -213,18 +213,16 @@ mosip.role.admin.masterdata.getlocationsmissingidslangcode=ZONAL_ADMIN,GLOBAL_AD
 mosip.role.admin.masterdata.getlocationhierarchylevels=INDIVIDUAL,REGISTRATION_SUPERVISOR,REGISTRATION_OFFICER,REGISTRATION_PROCESSOR,ZONAL_ADMIN,default,GLOBAL_ADMIN,PRE_REGISTRATION,REGISTRATION_ADMIN,REGISTRATION_OPERATOR
 #mosip.role.admin.masterdata.getlocationhierarchylevelslangcode=ZONAL_ADMIN,GLOBAL_ADMIN,PRE_REGISTRATION,REGISTRATION_PROCESSOR,INDIVIDUAL
 
-mosip.role.admin.masterdata.getmachinesidlangcode=GLOBAL_ADMIN,ZONAL_ADMIN,REGISTRATION_CLIENT,REGISTRATION_PROCESSOR,RESIDENT
-mosip.role.admin.masterdata.getmachineslangcode=GLOBAL_ADMIN,ZONAL_ADMIN,REGISTRATION_CLIENT,REGISTRATION_PROCESSOR
-mosip.role.admin.masterdata.getmachines=GLOBAL_ADMIN,ZONAL_ADMIN,REGISTRATION_CLIENT,REGISTRATION_PROCESSOR
+mosip.role.admin.masterdata.getmachinesidlangcode=GLOBAL_ADMIN,ZONAL_ADMIN,REGISTRATION_CLIENT,REGISTRATION_PROCESSOR,RESIDENT,MASTERDATA_ADMIN
+mosip.role.admin.masterdata.getmachineslangcode=GLOBAL_ADMIN,ZONAL_ADMIN,REGISTRATION_CLIENT,REGISTRATION_PROCESSOR,MASTERDATA_ADMIN
+mosip.role.admin.masterdata.getmachines=GLOBAL_ADMIN,ZONAL_ADMIN,REGISTRATION_CLIENT,REGISTRATION_PROCESSOR,MASTERDATA_ADMIN
 mosip.role.admin.masterdata.deletemachinesid=GLOBAL_ADMIN,ZONAL_ADMIN
-mosip.role.admin.masterdata.getmachinesmappedmachinesregcenterid=GLOBAL_ADMIN,ZONAL_ADMIN,REGISTRATION_PROCESSOR,REGISTRATION_SUPERVISOR,REGISTRATION_CLIENT,REGISTRATION_OFFICER
-mosip.role.admin.masterdata.postmachinessearch=GLOBAL_ADMIN,ZONAL_ADMIN,MASTERDATA_ADMIN
-mosip.role.admin.masterdata.postmachinesfiltervalues=GLOBAL_ADMIN,ZONAL_ADMIN,MASTERDATA_ADMIN
-mosip.role.admin.masterdata.putmachinesdecommissionmachineid=GLOBAL_ADMIN,ZONAL_ADMIN
+mosip.role.admin.masterdata.getmachinesmappedmachinesregcenterid=GLOBAL_ADMIN,ZONAL_ADMIN,REGISTRATION_PROCESSOR,REGISTRATION_SUPERVISOR,REGISTRATION_CLIENT,REGISTRATION_OFFICER,MASTERDATA_ADMIN
+mosip.role.admin.masterdata.postmachinessearch=GLOBAL_ADMIN,ZONAL_ADMIN,MASTERDATA_ADMIN,MASTERDATA_ADMIN
+mosip.role.admin.masterdata.postmachinesfiltervalues=GLOBAL_ADMIN,ZONAL_ADMIN,MASTERDATA_ADMIN,MASTERDATA_ADMIN
+mosip.role.admin.masterdata.putmachinesdecommissionmachineid=GLOBAL_ADMIN,ZONAL_ADMIN,MASTERDATA_ADMIN
 mosip.role.admin.masterdata.postmachines=GLOBAL_ADMIN,ZONAL_ADMIN,MASTERDATA_ADMIN
-mosip.role.admin.masterdata.putmachines=GLOBAL_ADMIN,ZONAL_ADMIN
-mosip.role.admin.masterdata.patchmachines=GLOBAL_ADMIN,ZONAL_ADMIN
-
+mosip.role.admin.masterdata.putmachines=GLOBAL_ADMIN,ZONAL_ADMIN,MASTERDATA_ADMIN
 mosip.role.admin.masterdata.getmachineshistoriesidlangcode=REGISTRATION_PROCESSOR,ZONAL_ADMIN,GLOBAL_ADMIN
 
 mosip.role.admin.masterdata.postmachinespecifications=ZONAL_ADMIN,GLOBAL_ADMIN,MASTERDATA_ADMIN
