updated application-local1 properties with missing properties

--- a/admin/admin-service/src/main/resources/application-local1.properties
+++ b/admin/admin-service/src/main/resources/application-local1.properties
@@ -364,3 +364,5 @@ mosip.admin.masterdata.service.url=http://masterdata.kernel/v1
 mosip.admin.keymanager.service.url=http://keymanager.keymanager/v1
 mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
 auth.allowed.urls=http://localhost:5000/
+
+mosip.iam.certs_endpoint=http://localhost:5000/keycloak/auth/realms/mosip/protocol/openid-connect/certs
