--- a/admin/admin-service/src/test/resources/application-test.properties
+++ b/admin/admin-service/src/test/resources/application-test.properties
@@ -455,3 +455,5 @@ mosip.admin.keymanager.service.url=https://dev.mosip.net/v1
 mosip.admin.base.url=https://dev.mosip.net
 mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
 auth.allowed.urls=http://localhost:5000/
+
+mosip.iam.certs_endpoint=http://localhost:5000/keycloak/auth/realms/mosip/protocol/openid-connect/certs
