--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<artifactId>admin-service</artifactId>
 	<name>admin-service</name>
-	<version>1.1.5.3</version>
+	<version>1.1.5.4-SNAPSHOT</version>
 	<url>http://maven.apache.org</url>
 	<packaging>jar</packaging>
 	<properties>
