--- a/admin/kernel-masterdata-service/src/main/resources/application-local1.properties
+++ b/admin/kernel-masterdata-service/src/main/resources/application-local1.properties
@@ -397,3 +397,4 @@ mosip.role.admin.masterdata.getdynamicfieldmissingidslangcode=GLOBAL_ADMIN,ZONAL
 
 zone.user.details.url=https://dev.mosip.net/v1/authmanager/userdetails
 mosip.kernel.masterdata.code.validate.regex=[^a-z0-9]
+mosip.kernel.masterdata.name.validate.regex=[^A-Za-z]
