MOSIP-21303 : Added validator for blocklisted words

--- a/admin/admin-service/src/main/resources/application-local1.properties
+++ b/admin/admin-service/src/main/resources/application-local1.properties
@@ -364,3 +364,5 @@ mosip.admin.keymanager.service.version=v1
 mosip.admin.base.url=https://dev.mosip.net
 mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
 auth.allowed.urls=http://localhost:5000/
+mosip.iam.certs_endpoint=http://localhost:5000/auth/realms/mosip/protocol/openid-connect/certs
+mosip.kernel.masterdata.name.validate.regex=[^A-Za-z]
