--- a/admin/admin-service/src/test/resources/application-test.properties
+++ b/admin/admin-service/src/test/resources/application-test.properties
@@ -456,3 +456,4 @@ mosip.admin.base.url=https://dev.mosip.net
 mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
 auth.allowed.urls=http://localhost:5000/
 
+mosip.kernel.masterdata.name.validate.regex=[^A-Za-z]
