--- a/admin/admin-service/src/test/resources/application-test.properties
+++ b/admin/admin-service/src/test/resources/application-test.properties
@@ -450,6 +450,7 @@ mosip.kernel.rid.sequence-length=5
 config.server.file.storage.uri=${spring.cloud.config.uri}/${spring.application.name}/${spring.profiles.active}/${spring.cloud.config.label}/
 registration.processor.identityjson=registration-processor-identity.json
 
+
 mosip.admin.masterdata.service.url=https://dev.mosip.net/v1
 mosip.admin.keymanager.service.url=https://dev.mosip.net/v1
 mosip.admin.base.url=https://dev.mosip.net
@@ -457,3 +458,8 @@ mosip.service.end-points=/**/masterdata/**,/**/keymanager/**
 auth.allowed.urls=http://localhost:5000/
 
 mosip.iam.certs_endpoint=http://localhost:5000/keycloak/auth/realms/mosip/protocol/openid-connect/certs
+mosip.admin.identityMappingJson=identity-mapping.json
+mosip.kernel.config.server.file.storage.uri=https://dev.mosip.net/config/admin/mz/1.1.5.4/
+mosip.admin.applicant-details.exposed-identity-fields=dob,applicantPhoto
+DIGITAL_CARD_STATUS_URL=https://qa3.mosip.net/v1/digitalcard
+RETRIEVE_IDENTITY_API=https://dev.mosip.net/idrepository/v1/identity/idvid
