--- a/admin/admin-service/pom.xml
+++ b/admin/admin-service/pom.xml
@@ -176,7 +176,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
 		<dependency>
 			<groupId>org.digibooster.spring.batch</groupId>
 			<artifactId>spring-batch-security</artifactId>
@@ -187,6 +186,16 @@
 					<artifactId>slf4j-api</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>io.mosip.kernel</groupId>
+			<artifactId>kernel-cbeffutil-api</artifactId>
+			<version>${kernel.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.mosip.biometric.util</groupId>
+			<artifactId>biometrics-util</artifactId>
+			<version>${kernel.version}</version>
 		</dependency>
 
 	</dependencies>
