--- a/admin/kernel-syncdata-service/src/test/resources/application.properties
+++ b/admin/kernel-syncdata-service/src/test/resources/application.properties
@@ -124,3 +124,5 @@ mosip.auth.adapter.impl.basepackage=io.mosip.kernel.auth.defaultadapter
 
 syncdata.cache.evict.delta-sync.cron=0 0/15 * * * *
 syncdata.cache.snapshot.cron=0 0 23 * * *
+
+mosip.syncdata.regclient.support114=true
