--- a/db_upgrade_scripts/mosip_master/upgrade.properties
+++ b/db_upgrade_scripts/mosip_master/upgrade.properties
@@ -8,6 +8,6 @@ SYS_ADMIN_PWD=
 DEFAULT_DB_NAME=postgres
 DBUSER_PWD=
 CURRENT_VERSION=
-TARGET_VERSION=
+UPGRADE_VERSION=
 ACTION=
 PRIMARY_LANGUAGE_CODE=eng
