MOSIP-28008: Added support in clientsettings sync for 1.1.4 regclient
Signed-off-by: Yash S <119652212+yashmsonkusare@users.noreply.github.com>

--- a/admin/kernel-syncdata-service/src/test/resources/application.properties
+++ b/admin/kernel-syncdata-service/src/test/resources/application.properties
@@ -155,6 +155,8 @@ mosip.role.admin.syncdata.getscriptsscriptName=REGISTRATION_SUPERVISOR,REGISTRAT
 syncdata.cache.evict.delta-sync.cron=0 0/15 * * * *
 syncdata.cache.snapshot.cron=0 0 23 * * *
 
+mosip.syncdata.regclient.support114=true
+
 mosip.kernel.auth.appids.realm.map={prereg:'preregistration',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip'}
 mosip.kernel.keymanager.unique.identifier.autoupdate=false
 #mosip.syncdata.clientsettings.data.dir=classpath
