--- a/admin/kernel-syncdata-service/src/main/resources/application-dev.properties
+++ b/admin/kernel-syncdata-service/src/main/resources/application-dev.properties
@@ -20,6 +20,7 @@ mosip.kernel.keymanager-service-sign-url=https://dev.mosip.io/v1/keymanager/sign
 mosip.kernel.signature.signature-request-id=SIGNATURE.REQUEST
 mosip.kernel.signature.signature-version-id=v1.0
 
+mosip.kernel.keymanager.unique.identifier.autoupdate=false
 auth.server.admin.issuer.internal.uri=https://iam.dev.mosip.net/auth/realms/
 auth.server.admin.issuer.domain.validate=false
 auth.server.admin.allowed.audience=mosip-regproc-client,mosip-prereg-client,mosip-admin-client,mosip-reg-client,mosip-resident-client
